--- a/angular.json
+++ b/angular.json
@@ -28,9 +28,7 @@
               "node_modules/primeng/resources/themes/omega/theme.css",
               "node_modules/primeng/resources/primeng.min.css"
             ],
-            "scripts": [
-              "node_modules/@aspnet/signalr/dist/browser/signalr.min.js"
-            ]
+            "scripts": []
           },
           "configurations": {
             "production": {
